CVS-20090408
+ [APOT] update compnodes script with -n option (only shows compnodes)
+ [APOT] add makeapot script to generate analytic potential files easily
+ add option to write energy output to file (endenergy)
+ potfit now reads the comments from the vasp2force.sh script and
  assigns the names to the potentials
+ [APOT] update "_" detection for potentials
+ fix mindist for ntypes > 2
+ vasp2force.sh does not need POSCAR anymore, it's optional now
+ added pot_index to iterate through potentials
+ [APOT] fix bug with disable_cp ending up in an infinite loop
+ [APOT] added MPI-parallelisation

CVS-20090312
+ [APOT] composition nodes were completely broken, fix that
+ [APOT] compnodes utility to calculate some composition nodes

CVS-20090306
+ output for stress can now be written to a file as well
+ [APOT] fixed potentials without _sc option
+ [APOT] added composition nodes to chemical potentials (only 2d)

CVS-20090216
+ fix rms error for energy-weight
+ [APOT] only write new potential after step adjustment
+ [APOT] the first step of a newly read potential was always wrong
+ don't write end_pot if there was no optimization
+ some cleanup for the error output
+ write unweighted energies and stresses
+ [APOT] added new potentials, for details see web page

CVS-20090210
+ [ACML] Updated compiler flags for acml, gcc...

CVS-20090116
+ [APOT] reworked the validate part
+ [APOT] enabled MPI support for apot, not tested yet, probably broken by chemical potentials
+ [APOT] added chemical potentials to the fit parameters
+ added na_typ variable, that holds the number of atoms per atomtype
+ write force data to file if endforce is given in parameter file
+ added option to write radial pair distances
+ [APOT] cp_# parameters in potential files are now ignored if disable_cp=1
+ [APOT] apot now displays rcut as cutoff and no longer the end of the potential
+ [APOT] added radial distribution to awk script
+ [APOT] fix bug where potential output was always smoothed