@@ -29,11 +29,11 @@
 *   Boston, MA  02110-1301  USA
 */
 /****************************************************************
-* $Revision: 1.3 $
-* $Date: 2009/04/08 06:47:21 $
+* $Revision: 1.4 $
+* $Date: 2009/04/14 08:16:21 $
 *****************************************************************/
 
-#ifdef APOT
+#if defined APOT && !defined EAM
 
 #include "potfit.h"
 
